--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,50 @@ h1 {
    ========================================================================== */
 
 
+/* Page Header */
+
+.pageHeader {
+    font-size: 30px;
+    margin-top: 100px;
+    text-transform: uppercase;
+    color: #636363;
+    margin-left: -23px;
+}
+
+.pageHeader::first-letter {
+    color: #fff;
+    background-color: #ffb836;
+    border-radius: 35px;
+    margin-right: 2px;
+    padding: 9px 7px 9px 40px;
+}
+
+
+.pageDescription {
+    color: #7c7c7c;
+    font-size: 14px;
+    padding-top: 15px;
+    line-height: 15px;
+}
+
+/* end page header */
+
+/* section header */
+
+.sectionHeader {
+    color: #4d4d4d;
+    font-size: 20px;
+    text-transform: uppercase;
+}
+
+.sectionDescription {
+    color: #4d4d4d;
+    font-size: 12px;
+}
+
+
+/* end section header */
+
 .mainHeader {
     padding-top: 97px;
 }
@@ -220,18 +264,22 @@ h1 {
 }
 
 .headerLang__langBtn {
+    display: inline-block;
+    margin-left: 17px;
+}
+
+.checkbox {
     width: 15px;
     height: 15px;
     background-color: #dfdfdf;
     border-radius: 4px;
     display: inline-block;
-    margin-left: 17px;
     vertical-align: middle;
     position: relative;
     cursor: pointer;
 }
 
-.headerLang__langBtn:after {
+.checkbox:after {
     position: absolute;
     content: '';
     background-color: #fff;
@@ -242,7 +290,7 @@ h1 {
     transform: rotate(50deg);
 }
 
-.headerLang__langBtn:before {
+.checkbox:before {
     position: absolute;
     content: '';
     background-color: #fff;
