--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,8 @@ h1 {
     color: #4d4d4d;
     font-size: 20px;
     text-transform: uppercase;
+    font-weight: 600;
+    font-family: "PFBeauSansProRegular";
 }
 
 .sectionDescription {
