--- a/css/main.css
+++ b/css/main.css
@@ -199,7 +199,7 @@ h1 {
     border-radius: 0 0 10px 0;
     content: '';
     background-color: #fff;
-    box-shadow: -4px 7px 7px rgba(157, 157, 157, 0.2);
+    box-shadow: -4px 6px 9px rgba(157, 157, 157, 0.1);
     bottom: -45px;
     height: 45px;
     width: 30%;
@@ -232,7 +232,7 @@ h1 {
     bottom: -45px;
     height: 45px;
     background-color: #fff;
-    box-shadow: 3px 1px 5px rgba(157, 157, 157, 0.21);
+    box-shadow: 3px 6px 5px rgba(157, 157, 157, 0.1);
     border-radius: 0 0 65px 0;
 }
 
@@ -616,13 +616,441 @@ h1 {
 }
 
 
+.previewVideo {
+    position: relative;
+}
+.previewVideo__thumbContainer.previewHome__thumbContainer {
+    overflow: visible !important;
+}
+.previewVideo__thumbContainer.previewHome__thumbContainer img {
+    border-radius: 10px;
+    box-shadow: 7px 4px 12px rgba(45, 46, 47, 0.15);
+}
+
+.homePreview__title {
+    top: -50px;
+    line-height: 1;
+    font-size: 16px;
+    position: relative;
+    text-transform: uppercase;
+    flex-basis: 35px !important;
+    border-left: 2px solid #ffb836;
+}
+
+.homePreview__title p {
+    margin-left: 0 !important;
+}
+
+.previewVideo__bgRect {
+    position: absolute;
+    width: 165px;
+    height: calc(100% - 50px);
+    background-color: #2d2e2f;
+    left: 0px;
+    bottom: 15px;
+    border-radius: 35px;
+    z-index: -1;
+}
+
+.titleSkew__orange.prieviewTitle {
+    text-align: right;
+    top: -10px;
+    left: -40%;
+    z-index: -1;
+    padding-right: 30px;
+}
+
+.titleSkew__orange {
+    background-color: #ffb836;
+    font-family: "PFBeauSansProLight";
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 25px;
+    position: relative;
+    padding: 22px 10px;
+    height: 83px;
+    max-width: 575px;
+}
+
+.titleSkew__orange:after {
+    background-image: url(../img/sprite.png);
+    background-position: -47px -240px;
+    width: 57px;
+    height: 83px;
+    content: '';
+    position: absolute;
+    right: -50px;
+    top: 0;
+}
+
+.titleSkew__orange:before {
+    background-image: url(../img/sprite.png);
+    background-position: -47px -240px;
+    width: 57px;
+    height: 83px;
+    content: '';
+    position: absolute;
+    left: -50px;
+    top: 0;
+    transform: rotate(-180deg);
+}
+
+.titleSkew__orange .circleWhite-icon {
+    margin-right: 15px;
+    margin-bottom: 3px;
+}
+
+.previewVideoHome {
+    padding-left: 15px;
+}
+
+.previewVideoHome .previewVideo__thumbContainer {
+    height: 310px;
+}
+
+.previewText {
+    color: #8d8d8d;
+    font-size: 13px;
+    line-height: 1.1;
+    position: relative;
+    top: 5px;
+    padding-left: 20px;
+}
+.previewText p {
+    margin-bottom: 14px;
+}
+
+.previewText .btn-grey {
+    margin-top: 10px;
+    font-size: 14px;
+    font-family: "PFBeauSansProLight";
+}
+
+.previewText button {
+    outline: none;
+}
+
+.sectionHeaderSquare {
+    font-size: 30px;
+    padding-top: 40px;
+    text-transform: uppercase;
+    color: #636363;
+}
+
+.previewVideoHome .previewVideo__top {
+    left: -20px;
+}
+
+.sectionHeaderSquare::first-letter {
+    color: #fff;
+    background-color: #ffb836;
+    border-radius: 10px;
+    margin-right: 2px;
+    padding: 4px 12px 4px 12px;
+}
+.sectionDescription {
+    color: #7c7c7c;
+    font-size: 14px;
+    padding-top: 15px;
+    line-height: 15px;
+}
+
 /*section Main Home*/
 
 
 
+/*section Step*/
+
+.stepContainer {
+    padding-top: 40px;
+}
+
+.stepNumbers ul {
+    padding: 0;
+    margin: 0;
+}
+
+.stepNumbers ul li {
+    display: block;
+    list-style-type: none;
+    margin-bottom: 50px;
+}
+.stepNumbers ul li:last-child {
+    margin-bottom: 0;
+}
+
+.stepNumbers ul li .stepNumbers__text {
+    color: #d8d8d8;
+    margin-left: 10px;
+    -webkit-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+.stepNumbers ul li .stepNumbers__number {
+    display: inline-block;
+    border-radius: 50%;
+    background-color: #d8d8d8;
+    color: #fff;
+    font-size: 20px;
+    width: 45px;
+    height: 45px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    text-align: center;
+    font-family: "PFBeauSansProBold";
+    padding: 7px 0;
+    position: relative;
+    -webkit-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+.stepNumbers ul li .stepNumbers__number:after {
+    position: absolute;
+    content: '';
+    display: block;
+    width: 2px;
+    height: 25px;
+    bottom: -25px;
+    left: 21px;
+    background-color: #d8d8d8;
+    -webkit-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+.stepNumbers ul li .stepNumbers__number:before {
+    position: absolute;
+    content: '';
+    display: block;
+    width: 2px;
+    height: 25px;
+    top: -25px;
+    left: 21px;
+    background-color: #d8d8d8;
+    -webkit-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+.stepNumbers ul li:first-child .stepNumbers__number:before {
+    display: none;
+}
+.stepNumbers ul li:last-child .stepNumbers__number:after {
+    display: none;
+}
+
+.stepNumbers ul li.active .stepNumbers__number {
+    background-color: #ffb836;
+}
+.stepNumbers ul li.active .stepNumbers__text {
+    color: #ffb836;
+}
+.stepNumbers ul li.active .stepNumbers__number:before {
+    background-color: #ffb836;
+}
+.stepNumbers ul li.active .stepNumbers__number:after {
+    background-color: #ffb836;
+}
+
+.sliderStep__title {
+    font-size: 20px;
+    color: #636363;
+    position: relative;
+    padding-bottom: 15px;
+    font-family: "PFBeauSansProSemiBold";
+    font-weight: 300;
+}
+
+.sliderStep__title:after {
+    content: '';
+    position: absolute;
+    background-color: #ffb836;
+    height: 2px;
+    width: 140px;
+    border-radius: 1px;
+    bottom: 0;
+    left: 0;
+}
+
+.sliderStep__number {
+    color: #c6c6c6;
+    padding-bottom: 15px;
+}
+
+.sliderStep__text {
+    padding-top: 15px;
+    color: #8b8b8b;
+    font-size: 12px;
+    line-height: 1.1;
+}
+.sliderStep__text p {
+    margin-bottom: 15px;
+}
+
+.sliderSteps {
+    max-width: 550px;
+    margin: auto;
+    position: relative;
+    padding-top: 25px;
+}
+
+.sliderStepImg {
+    max-width: 100%;
+}
+
+.sliderStepImgSlider  {
+    position: relative;
+    top: 15%;
+}
+
+
+.stepSlider__prevArr {
+    background-image: url(../img/sprite.png);
+    width: 12px;
+    height: 15px;
+    background-position: -313px -35px;
+    cursor: pointer;
+    position: absolute;
+    right: 30px;
+    transform: rotate(-180deg);
+    top: 0;
+    z-index: 100;
+}
+
+.stepSlider__nextArr {
+    background-image: url(../img/sprite.png);
+    width: 12px;
+    height: 15px;
+    background-position: -313px -35px;
+    cursor: pointer;
+    position: absolute;
+    right: 5px;
+    top: 2px;
+    z-index: 100;
+}
+.stepSlider__prevArr:hover {
+    background-position: -301px -35px;
+    transform: rotate(0deg);
+    top: 2px;
+}
+.stepSlider__nextArr:hover {
+    background-position: -301px -35px;
+    transform: rotate(-180deg);
+    top: 0px;
+}
+
+.sliderStep__button button {
+    border: 1px solid #e5e5e5;
+    color: #6a6a6a;
+    font-size: 12px;
+    border-radius: 12px;
+    background-color: transparent;
+    padding: 12px 22px;
+    margin-top: 10px;
+}
+
+.sectionSteps {
+    padding-bottom: 45px;
+}
+
+/*section Step*/
+
+
+
+/*Footer*/
+
+.FooterPaymentsOrange {
+    background-color: #ffb836;
+    position: relative;
+}
+
+.topFooterBar__title {
+    background-color: #2c2f31;
+    color: #fff;
+    position: absolute;
+    display: inline-block;
+    left: 0;
+    top: 0;
+    line-height: 1;
+    padding: 28px 10px;
+    text-transform: uppercase;
+}
+
+.topFooterBar__title:after {
+    width: 70px;
+    height: 100%;
+    background-image: url(../img/sprite.png);
+    background-position: -123px -222px;
+    display: block;
+    content: '';
+    top: 0;
+    right: -69px;
+    position: absolute;
+}
+
+.topFooterBar__title b {
+    display: block;
+    font-size: 24px;
+    font-family: "PFBeauSansProBold";
+}
+
+.topFooterBar__title span {
+    display: block;
+    font-size: 20px;
+    font-family: "PFBeauSansProLight";
+}
+
+.topFooterBar__payments {
+    padding: 24px 20px 24px 0px;
+    text-align: right;
+    position: relative;
+}
+
+.topFooterBar__payments:after {
+    position: absolute;
+    right: -70px;
+    top: 0;
+    width: 90px;
+    content: '';
+    background-image: url(../img/sprite.png);
+    height: 100%;
+    background-position: -195px -218px;
+}
+
+.topFooterBar__payments img {
+    width: calc(100% - 180px);
+}
+
+/*Footer*/
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
+
+
+.sectionShadow {
+    position: relative;
+    padding-bottom: 40px;
+}
+
+.sectionShadow:after {
+    background-image: url(../img/shadowSection.png);
+    height: 20px;
+    content: '';
+    width: 100%;
+    bottom: -20px;
+    position: absolute;
+    background-size: 100%;
+    left: 0;
+    right: 0;
+    display: block;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: 0 -1px;
+}
+
 
 
 .btn-black {
@@ -638,6 +1066,18 @@ h1 {
     cursor: pointer;
     outline: none;
 }
+
+.btn-grey {
+    border-radius: 12px;
+    color: #fff;
+    background-color: #d8d8d8;
+    padding: 12px 20px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+
 
 a.btn-usually:hover {
     text-decoration: none;
@@ -734,6 +1174,22 @@ a.btn-usually:hover {
 
 }
 
+.circleWhite-icon {
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    vertical-align: middle;
+    background-position: -335px -9px;
+}
+
+.arrowRight-icon {
+    width: 10px;
+    height: 10px;
+    display: inline-block;
+    vertical-align: middle;
+    background-position: -4px -301px;
+}
+
 
 /*Icons*/
 
@@ -742,6 +1198,10 @@ a.btn-usually:hover {
 
 .fontSize_12px {
     font-size: 12px;
+}
+
+.fontSize_20px {
+    font-size: 20px;
 }
 
 /*font sizes*/
