lets do footer^_^

--- a/css/main.css
+++ b/css/main.css
@@ -957,6 +957,278 @@ h1 {
 
 /*section Step*/
 
+/*Section Plans*/
+
+.sectionPlans {
+    padding-top: 40px;
+}
+
+.sectionPlans__cards {
+    position: relative;
+    top: -50px;
+}
+
+.sectionPlans__title {
+    background-image: url(../img/titlePlans.png);
+    color: #fff;
+    font-size: 30px;
+    font-family: "PFBeauSansProSemiBold";
+    padding-top: 50px;
+    padding-bottom: 89px;
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+.sectionPlans__title:before {
+    content: '';
+    position: absolute;
+    left: -404px;
+    width: 421px;
+    top: 2px;
+    bottom: 0;
+    background-image: url(../img/leftBgPlans.png);
+    background-position-x: 63px;
+}
+
+.sectionPlans__descriptionTop {
+    color: #7c7c7c;
+    line-height: 1;
+    padding-top: 45px;
+}
+
+.planCardItem {
+    margin-bottom: 10px;
+}
+
+.planCardItem__nameCard {
+    background-color: #fff;
+    border-radius: 15px;
+    box-shadow: 0px 5px 50px rgba(50, 50, 50, 0.1);
+    padding: 40px 25px;
+    margin-right: -5px;
+    height: 155px;
+}
+.planCardItem__name {
+    color: #636363;
+    font-size: 28px;
+    font-family: "PFBeauSansProBold";
+    text-transform: uppercase;
+    white-space: nowrap;
+}
+
+.planCardItem__name span {
+    color: #ffb836;
+}
+.planCardItem__descr {
+    font-size: 14px;
+    line-height: 1.1;
+    color: #636363;
+}
+
+.planCardItem__infoCardItem {
+    background-color: #fff;
+    border-radius: 15px;
+    box-shadow: 0px 5px 50px rgba(50, 50, 50, 0.1);
+    padding: 24px 10px;
+    display: inline-block;
+    width: 48.5%;
+    vertical-align: top;
+    line-height: 1.1;
+    height: 75px;
+    margin-bottom: 5px;
+    position: relative;
+}
+.planCardItem__infoCardItem span {
+    color: #ffb836;
+    font-family: "PFBeauSansProBold";
+    margin-top: 5px;
+    position: absolute;
+    right: 10px;
+    font-size: 14px;
+}
+
+.planCardItem__infoCardItem p {
+    font-size: 12px;
+    font-family: "PFBeauSansProLight";
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.calculateTopBar {
+    position: relative;
+}
+
+.calculateTopBar:after {
+    position: absolute;
+    content: '';
+    width: 45px;
+    height: 19px;
+    right: 20px;
+    bottom: 2px;
+    background-image: url(../img/sprite.png);
+    background-position: -187px -184px;
+    z-index: 100;
+}
+
+.calculateTopBar:before {
+    position: absolute;
+    content: '';
+    width: 45px;
+    height: 19px;
+    left: 20px;
+    bottom: 2px;
+    background-image: url(../img/sprite.png);
+    background-position: -187px -184px;
+    z-index: 100;
+}
+
+.calculateTopBar__upBlock {
+    color: #fff;
+    padding: 40px 20px;
+    border-radius: 10px;
+    background-color: #ffb836;
+    position: relative;
+    z-index: 10;
+    box-shadow: 0px 25px 36px rgba(58, 58, 58, 0.1);
+}
+
+.calculateTopBar__bottomBlock {
+    color: #fff;
+    padding: 35px 20px 30px;
+    border-radius: 0px 0px 15px 15px;
+    background-color: #ffb836;
+    position: relative;
+    top: -15px;
+}
+
+.calculateTopBar__headered {
+    line-height: 1.1;
+    text-transform: uppercase;
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 10px;
+}
+
+.planCalculate {
+    position: relative;
+}
+
+.planCalculate:after {
+    content: '';
+    position: absolute;
+    right: -390px;
+    top: 65px;
+    background-image: url(../img/bgPlansRight.png);
+    width: 380px;
+    height: 100px;
+    background-repeat: no-repeat;
+}
+
+.planCalculate__title {
+    font-size: 20px;
+    font-family: "PFBeauSansProSemiBold";
+    margin: 0;
+}
+.planCalculate__date {
+    font-size: 12px;
+    margin: 0;
+}
+
+.calculateTopBar__inputInvest {
+    color: #3b3b3b;
+    width: 50%;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.calculateTopBar__inputInvest p {
+    font-size: 14px;
+    text-transform: uppercase;
+    margin-bottom: 0;
+}
+
+.calculateTopBar__InvestValue {
+    font-size: 28px;
+    font-family: "PFBeauSansProLight";
+}
+
+
+.calculateTopBar__btnCurrency {
+    display: inline-block;
+    width: 48%;
+    text-align: right;
+    vertical-align: middle;
+}
+
+.calculateTopBar__btnCurrency button {
+    background-color: rgba(59, 59, 59, 0.25);
+    border: none;
+    border-radius: 8px;
+    color: #fff;
+    font-size: 14px;
+    padding: 5px 12px;
+    outline: none;
+    cursor: pointer;
+}
+
+.calculateTopBar__btnCurrency button:hover {
+    background-color: rgba(59, 59, 59, 0.7);
+}
+
+.calculateTopBar__btnCurrency button.activeCur {
+    background-color: #3b3b3b;
+}
+
+.calculateBottomBar {
+    background-color: #2f3133;
+    border-radius: 10px;
+    padding: 14px 0 0;
+    position: relative;
+    top: -10px;
+}
+
+.calculateBottomBar__item {
+    color: #fff;
+    position: relative;
+    padding: 17px 20px;
+    line-height: 1;
+}
+
+.calculateBottomBar__item:after {
+    position: absolute;
+    content: '';
+    left: 0;
+    bottom: -7px;
+    width: 190px;
+    background-repeat: no-repeat;
+    height: 15px;
+    background-image: url(../img/shadowPlanItem.png);
+}
+
+.calculateBottomBar__item:last-child:after {
+    display: none;
+}
+
+.calculateBottomBar__titleItem {
+    text-transform: uppercase;
+    font-size: 14px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.calculateBottomBar__valueItem {
+    display: inline-block;
+    font-size: 25px;
+    vertical-align: middle;
+    float: right;
+    padding-right: 5px;
+    margin-top: -5px;
+}
+
+.calculateBottomBar__titleItem .calendar-icon,
+.calculateBottomBar__titleItem .coin-icon {
+    margin-right: 12px;
+}
 
 
 /*Footer*/
@@ -1188,6 +1460,30 @@ a.btn-usually:hover {
     display: inline-block;
     vertical-align: middle;
     background-position: -4px -301px;
+}
+
+.circleTriagle-icon {
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    vertical-align: middle;
+    background-position: -355px -10px;
+}
+
+.calendar-icon {
+    display: inline-block;
+    width: 25px;
+    height: 28px;
+    background-position: -114px -179px;
+    vertical-align: middle;
+}
+
+.coin-icon {
+    display: inline-block;
+    width: 25px;
+    height: 28px;
+    background-position: -147px -179px;
+    vertical-align: middle;
 }
 
 
