--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,10 @@ html {
     font-family: "PFBeauSansProRegular";
 }
 
+body {
+    overflow-x: hidden;
+}
+
 ::-moz-selection {
     background: #b3d4fc;
     text-shadow: none;
@@ -951,10 +955,6 @@ h1 {
     margin-top: 10px;
 }
 
-.sectionSteps {
-    padding-bottom: 45px;
-}
-
 /*section Step*/
 
 /*Section Plans*/
@@ -966,6 +966,8 @@ h1 {
 .sectionPlans__cards {
     position: relative;
     top: -50px;
+    overflow: hidden;
+    margin-bottom: -50px;
 }
 
 .sectionPlans__title {
@@ -1037,6 +1039,7 @@ h1 {
     height: 75px;
     margin-bottom: 5px;
     position: relative;
+    max-width: 180px;
 }
 .planCardItem__infoCardItem span {
     color: #ffb836;
@@ -1230,6 +1233,275 @@ h1 {
     margin-right: 12px;
 }
 
+
+/*SLIDER HOME*/
+
+.sectionVideoNews {
+    background: radial-gradient(#f2f2f2, #fff);
+    padding-bottom: 100px !important;
+    margin-bottom: 10px;
+}
+
+
+.videoNews {
+    background: radial-gradient(#ebebeb, #fff);
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+.videoNews__previewSliderWrapper {
+    width: calc(48% + 40px);
+    margin-left: -40px;
+}
+
+.videoNews__2RowsSliderWrapper {
+    width: calc(52% - 30px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 30px;
+    height: 330px;
+}
+
+.videoNews__previewSliderWrapper .previewVideo__thumbContainer {
+    height: 330px;
+}
+
+.videoNews__2RowsSliderWrapper .videoItem {
+    height: 160px;
+}
+
+.videoNews__2RowsSliderWrapper .videoItem.slick-slide > .videoItem {
+    margin: 0;
+}
+
+.videoNews__2RowsSliderWrapper .videoItem .videoItem__overlay {
+    opacity: 0;
+    background-color: rgba(62, 62, 62, 0.78);
+    padding: 30px 20px;
+    font-size: 12px;
+    display: block;
+}
+
+.videoNews__2RowsSliderWrapper .videoItem .videoItem__overlay .playVideo {
+    color: #fcb635;
+    font-size: 12px;
+}
+
+.playVideo:before {
+    position: relative;
+    display: inline-block;
+    content: '';
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 4px 0 4px 8px;
+    border-color: transparent transparent transparent #fcb635;
+    margin-right: 6px;
+}
+
+.videoNews__2RowsSliderWrapper .videoItem .videoItem__overlay p {
+    color: #fff;
+}
+
+.videoNews__2RowsSliderWrapper .videoItem:hover .videoItem__overlay {
+    opacity: 1;
+}
+
+.videoNews .previewVideo {
+    padding-bottom: 40px;
+    padding-top: 30px;
+}
+
+.videoNews .previewVideo::before {
+    width: 70%;
+    top: 15px;
+    height: 75%;
+    border-radius: 8px;
+    z-index: -1;
+    left: 25px;
+}
+
+.videoNews .previewVideo:after {
+    width: calc(100% - 39px);
+    height: calc(100% - 69px);
+    background-image: url(../img/bordersVideoCover.png);
+    background-repeat: no-repeat;
+    bottom: 30px;
+    background-size: 100% 100%;
+    right: 9px;
+    left: 38px;
+    top: 29px;
+    background-position: 0 0px;ter;
+}
+
+.previewVideo__homeDate {
+    position: absolute;
+    left: 50px;
+    top: 40px;
+    background-color: #39393c;
+    border-radius: 4px;
+    padding: 5px 10px;
+    color: #fff;
+    font-family: "PFBeauSansProLight";
+    font-size: 14px;
+}
+
+.videoNews .circlePlayVideo {
+    position: absolute;
+    right: calc(50% - 75px);
+    top: calc(50% - 35px);
+    z-index: 100;
+}
+
+.previewVideo__nameVideo {
+    position: absolute;
+    bottom: 0px;
+    left: 40px;
+    font-size: 14px;
+    font-family: "PFBeauSansProLight";
+}
+
+/*SECTION PRESS CENTER*/
+
+.pressCenterSliderWrap {
+    max-width: 1280px;
+    width: 100%;
+    margin: auto;
+}
+
+.pressCenterSlider__item.slick-active {
+    opacity: 1;
+}
+
+.pressCenterSlider__item {
+    padding: 5px 8px 10px;
+    opacity: 0.2;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.pressCenterSlider__cont {
+    box-shadow: 0px 2px 12px rgba(116, 116, 116, 0.18);
+    border-radius: 10px;
+    padding: 25px 20px;
+    background-color: #fff;
+    -webkit-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+.pressCenterSlider__title {
+    color: #727272;
+    font-size: 18px;
+    font-family: "PFBeauSansProSemiBold";
+    display: inline-block;
+    vertical-align: middle;
+    line-height: 1.1;
+    width: calc(100% - 105px);
+}
+
+.pressCenterSlider__date {
+    display: inline-block;
+    vertical-align: middle;
+    width: 100px;
+    text-align: right;
+}
+
+.pressCenterSlider__date > span {
+    color: #ffb836;
+    font-size: 36px;
+    font-family: "PFBeauSansProLight";
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.pressCenterSliderPreview {
+    color: #727272;
+    font-size: 12px;
+    line-height: 1.2;
+    margin-top: 40px;
+}
+
+
+.pressCenterSlider__dateInfo {
+    display: inline-block;
+    vertical-align: middle;
+    text-align: left;
+    margin-top: 40px;
+}
+
+.pressCenterSlider__dateInfo span {
+    display: block;
+    font-size: 13px;
+    color: #727272;
+    font-family: "PFBeauSansProLight";
+    line-height: 1.1;
+}
+
+.pressCenterSliderInfo {
+    display: none;
+    font-size: 12px;
+    color: #fff;
+    line-height: 1.2;
+}
+
+.pressCenterSliderInfo p:last-child {
+    margin-bottom: 0;
+}
+
+.pressCenterSliderPreview button {
+    background-color: #2c2f31;
+    color: #fff;
+    font-size: 12px;
+    font-family: "PFBeauSansProLight";
+    border-radius: 10px;
+    padding: 8px 14px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+.pressCenterSlider__cont.activeBlock {
+    background-color: #2c2f31;
+}
+
+.pressCenterSlider__cont.activeBlock .pressCenterSliderPreview {
+    display: none;
+}
+
+.pressCenterSlider__cont.activeBlock .pressCenterSliderInfo {
+    display: block;
+
+}
+
+.ReadAllNews {
+    padding-left: 80px;
+    color: #c2c2c2;
+    font-size: 14px;
+    margin-top: 25px;
+    display: block;
+}
+
+.ReadAllNews span {
+    width: 26px;
+    height: 26px;
+    border-radius: 50%;
+    display: inline-block;
+    background-color: #c2c2c2;
+    background-image: url(../img/footer_list_mark.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    vertical-align: middle;
+    margin-right: 10px;
+}
+
+
+
+/*SECTION PRESS CENTER*/
 
 /*Footer*/
 
@@ -1534,6 +1806,14 @@ a.btn-usually:hover {
 
 .paddingLeft_null {
     padding-left: 0 !important;
+}
+
+.paddingBottom_50px {
+    padding-bottom: 50px;
+}
+
+.paddingRight_null {
+    padding-right: 0 !important;
 }
 
 .fixed {
