--- a/css/contacts.css
+++ b/css/contacts.css
@@ -51,6 +51,7 @@
 	border-radius: 5px;
 	height: 40px;
 	outline: none;
+	padding: 10px 15px;
 }
 
 .sectionForm form textarea {
@@ -60,6 +61,7 @@
 	border-radius: 5px;
 	resize: none;
 	outline: none;
+	padding: 10px 15px;
 }
 
 .sectionForm form button {
