--- a/css/plans.css
+++ b/css/plans.css
@@ -107,3 +107,17 @@
 .planSectionItem  {
 	padding-top: 35px;
 }
+
+.wrap_chart {
+	margin-top: 35px;
+	min-height: 215px;
+	font-family: "PFBeauSansProLight";
+	font-size: 12px;
+}
+
+.under_chart {
+	font-size: 12px;
+	color: #949494;
+	padding-top: 30px;
+	line-height: 1.2;
+}
