--- a/css/partners.css
+++ b/css/partners.css
@@ -164,3 +164,57 @@
 	font-size: 14px;
 	color: #636363;
 }
+
+
+
+
+@media (max-width: 1199px) {
+	.levelsGroup {
+		padding-left: 25px;
+	}
+}
+
+@media (max-width: 991px) {
+	.partner__earningsPart {
+		padding: 0;
+	}
+	.levelsGroup {
+		padding-left: 50px;
+	}
+}
+
+@media (max-width: 767px) {
+	.restrictions {
+		padding-top: 60px;
+	}
+}
+
+@media (max-width: 575px) {
+	.partner__descrPart {
+		flex-wrap: wrap;
+	}
+}
+
+@media (max-width: 479px) {
+	.levelsGroup {
+		padding-left: 25px;
+	}
+}
+
+@media (max-width: 400px) {
+	.partner__descrPart {
+		padding: 20px;
+	}
+
+	.levelsGroup .percents {
+		float: right;
+	}
+}
+
+@media (max-width: 348px) {
+
+}
+
+@media (max-width: 320px) {
+
+}
